--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+            <img src="advanced.pics/logo.png" alt="logo">
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -21,43 +22,43 @@
         
     </header>
     <main>
-        <section>
-            <div>
+        <section class="sec1">
+            <div class="home-text">
                 <h1>Get schooled</h1>
-                <span>SMILES</span>
-                <span>GRIN</span>
-                <span>LAUGH</span>
+                <span class="span1">SMILES</span>
+                <span class="span2">GRIN</span>
+                <span class="span3">LAUGH</span>
                 <button>REGISTER FOR FREE</button>
             </div>
             <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
-                        <img src="./images/1 (3).png" alt="">
-                        <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                <h2 class="home-H"><span class="violet">Learn</span> from the pros</h2>
+                <div class="home-pics">
+                    <div class="box">
+                        <img src="advanced.pics/1.png" alt="smile">
+                        <h3 class="home-title">Phillip Massey</h3>
+                        <p class="home-p">« Smile of the year » <span>2018 - 2019</span></p>
                     </div>
-                    <div>
-                        <img src="./images/6.png" alt="">
-                        <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                    <div class="box">
+                        <img src="advanced.pics/3.png" alt="smile 2">
+                        <h3 class="home-title">Nannie Lawrence</h3>
+                        <p class="home-p">Best « little smile » <span>2017</span></p>
                     </div>
-                    <div>
-                        <img src="./images/7.png" alt="">
-                        <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                    <div class="box">
+                        <img src="advanced.pics/2.png" class="circle" alt="smile">
+                        <h3 class="home-title">Bruce Walters</h3>
+                        <p class="home-p">Best « Friend Smile » <span>live performance 2019</span></p>
                     </div>
-                    <div>
-                        <img src="./images/8.png" alt="">
-                        <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                    <div class="box">
+                        <img src="advanced.pics/4.png" alt="smile">
+                        <h3 class="home-title">Henry Hughes</h3>
+                        <p class="home-p">« 24h smiles » winner <span>2016 - 2019</span></p>
                     </div>
                 </div>
             </div>
         </section>
         <section>
             <div>
-                <img src="./images/Bitmap.png" alt="image">
+                <img src="advanced.pics/5.png" alt="image">
             </div>
             <div>
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -68,11 +69,11 @@
         <section>
             <h2>Most popular tutorials</h2>
             <div>
-                <img src="./images/Bitmap (1).png" alt="">
+                <img src="advanced.pics/9.png" alt="">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="advanced.pics/1.png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -85,11 +86,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (4).png" alt="">
+                <img src="advanced.pics/6.png" alt="">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="advanced.pics/1.png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -102,11 +103,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (3).png" alt="">
+                <img src="advanced.pics/8.png" alt="">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="advanced.pics/1.png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -119,11 +120,11 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (2).png" alt="">
+                <img src="advanced.pics/7.png" alt="">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
-                    <img src="./images/1 (3).png" alt="">
+                    <img src="advanced.pics/1.png" alt="">
                     <h4>Phillip Massey</h4>
                 </div>
                 <div>
@@ -139,22 +140,22 @@
         <section>
             <h2>Free membership</h2>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="advanced.pics/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="advanced.pics/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="advanced.pics/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
+                <img src="advanced.pics/smile.png" alt="">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
@@ -198,7 +199,7 @@
     <footer>
         <section>
             <div class="footer-div">
-                <img src="smile.png" alt="logo">
+                <img src="advanced.pics/logo.png" style="background-color: black;" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
