feat: Added some attribute to style the page

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -56,108 +56,128 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="pink">
             <div>
-                <img src="advanced.pics/5.png" alt="image">
+                <img src="advanced.pics/5.png" class="pink-pic" alt="image">
             </div>
-            <div>
-                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+            <div class="pink-text">
+                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better <br> place to learn smiling. And it’s so fun!</blockquote>
+                <h3>Person Name</h3>
                 <P>weather presenter</P>
             </div>
         </section>
-        <section>
-            <h2>Most popular tutorials</h2>
-            <div>
-                <img src="advanced.pics/9.png" alt="">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="advanced.pics/1.png" alt="">
-                    <h4>Phillip Massey</h4>
+        <section class="white-container">
+            <h2 class="popular">Most <span>popular</span> tutorials</h2>
+            <div  class="white-page">
+                <div class="sac">
+                    <img src="advanced.pics/9.png" alt="smile face">
+                    <img src="advanced.pics/play.png" class="play-icon" alt="play logo">
+                    <h3>Diagonal Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="small-pic">
+                        <img src="advanced.pics/1.png" alt="smile">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <div class="rating">
+                        <img src="advanced.pics/rating.png" alt="rating stars">
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                <div class="sac">
+                    <img src="advanced.pics/7.png" alt="smile face">
+                    <img src="advanced.pics/play.png" class="play-icon" alt="play logo">
+                    <h3>Sad Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="small-pic">
+                        <img src="advanced.pics/1.png" alt="smile">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <div class="rating">
+                        <img src="advanced.pics/rating.png" alt="rating stars">
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="advanced.pics/6.png" alt="">
-                <h3>Happy Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="advanced.pics/1.png" alt="">
-                    <h4>Phillip Massey</h4>
+                <div class="sac">
+                    <img src="advanced.pics/8.png" alt="">
+                    <img src="advanced.pics/play.png" class="play-icon" alt="play logo">
+                    <h3>Natural Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="small-pic">
+                        <img src="advanced.pics/1.png" alt="smile">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <div class="rating">
+                        <img src="advanced.pics/rating.png" alt="rating stars">
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+                <div class="sac">
+                    <img src="advanced.pics/6.png" alt="Happy smile">
+                    <img src="advanced.pics/play.png" class="play-icon" alt="play logo">
+                    <h3>Happy Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="small-pic">
+                        <img src="advanced.pics/1.png" alt="smile">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="sac">
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <div class="rating">
+                        <img src="advanced.pics/rating.png" alt="rating stars">
+                        <p>8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="advanced.pics/8.png" alt="">
-                <h3>Natural Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="advanced.pics/1.png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="advanced.pics/7.png" alt="">
-                <h3>Sad Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="advanced.pics/1.png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
             </div>
         </section>
-        <section>
+        <section class="member">
             <h2>Free membership</h2>
-            <div>
-                <img src="advanced.pics/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="advanced.pics/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="advanced.pics/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="advanced.pics/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="member-div">
+                <div>
+                    <img src="advanced.pics/smile.png" alt="smile emoji">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="advanced.pics/smile.png" alt="smile emoji">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="advanced.pics/smile.png" alt="smile emoji">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="advanced.pics/smile.png" alt="smile emoji">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
