feat: Added a final attributes for styling the webpage

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -77,14 +77,7 @@
                     <div class="small-pic">
                         <img src="advanced.pics/1.png" alt="smile">
                         <h4>Phillip Massey</h4>
-                    </div>
-                    <div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                    </div>
+                    </div>                    
                     <div class="rating">
                         <img src="advanced.pics/rating.png" alt="rating stars">
                         <p>8 min</p>
@@ -98,14 +91,7 @@
                     <div class="small-pic">
                         <img src="advanced.pics/1.png" alt="smile">
                         <h4>Phillip Massey</h4>
-                    </div>
-                    <div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                    </div>
+                    </div>                    
                     <div class="rating">
                         <img src="advanced.pics/rating.png" alt="rating stars">
                         <p>8 min</p>
@@ -119,14 +105,7 @@
                     <div class="small-pic">
                         <img src="advanced.pics/1.png" alt="smile">
                         <h4>Phillip Massey</h4>
-                    </div>
-                    <div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                    </div>
+                    </div>                    
                     <div class="rating">
                         <img src="advanced.pics/rating.png" alt="rating stars">
                         <p>8 min</p>
@@ -140,14 +119,7 @@
                     <div class="small-pic">
                         <img src="advanced.pics/1.png" alt="smile">
                         <h4>Phillip Massey</h4>
-                    </div>
-                    <div class="sac">
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                        <div><i class="fa-solid fa-star"></i></div>
-                    </div>
+                    </div>                    
                     <div class="rating">
                         <img src="advanced.pics/rating.png" alt="rating stars">
                         <p>8 min</p>
@@ -156,60 +128,60 @@
             </div>
         </section>
         <section class="member">
-            <h2>Free membership</h2>
+            <h2><span>Free</span> membership</h2>
             <div class="member-div">
-                <div>
+                <div class="emoji-div">
                     <img src="advanced.pics/smile.png" alt="smile emoji">
                     <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
-                <div>
+                <div class="emoji-div">
                     <img src="advanced.pics/smile.png" alt="smile emoji">
                     <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
-                <div>
+                <div class="emoji-div">
                     <img src="advanced.pics/smile.png" alt="smile emoji">
                     <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
-                <div>
+                <div class="emoji-div">
                     <img src="advanced.pics/smile.png" alt="smile emoji">
                     <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
                 </div>
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
-        <section>
+        <section class="faq">
             <h2>F.A.Q</h2>
-            <div>
-                <div>
+            <div class="faq-div">
+                <div class="faq-container1">
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
 
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
-                <div>
+                <div class="faq-container2">
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-p">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
@@ -219,8 +191,8 @@
     <footer>
         <section>
             <div class="footer-div">
-                <img src="advanced.pics/logo.png" style="background-color: black;" alt="logo">
-                <div>
+                <img src="advanced.pics/logo.png" alt="logo">
+                <div class="social-media">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
