Added final correction before submission

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -56,6 +56,7 @@
                 </div>
             </div>
         </section>
+        <!-- Quotes section -->
         <section class="pink">
             <div>
                 <img src="advanced.pics/5.png" class="pink-pic" alt="image">
@@ -66,6 +67,7 @@
                 <P>weather presenter</P>
             </div>
         </section>
+        <!-- Video list -->
         <section class="white-container">
             <h2 class="popular">Most <span>popular</span> tutorials</h2>
             <div  class="white-page">
@@ -127,6 +129,7 @@
                 </div>
             </div>
         </section>
+        <!-- Membership section -->
         <section class="member">
             <h2><span>Free</span> membership</h2>
             <div class="member-div">
@@ -153,6 +156,7 @@
             </div>
             <button>REGISTER FOR FREE</button>
         </section>
+        <!-- FAQ section -->
         <section class="faq">
             <h2>F.A.Q</h2>
             <div class="faq-div">
@@ -188,6 +192,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer section -->
     <footer>
         <section>
             <div class="footer-div">
