--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -3,34 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
   <title>Headphones Landing Page</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="0-styles.css">
+  <link rel="stylesheet" href="holberton_school-icon/style.css">
 </head>
 <body>
   <header class="hero">
     <div class="container hero-content">
       <nav class="navbar">
         <img src="images/favicon.ico" alt="Headphones Logo" class="logo">
-        <h1>HEADPHONES</h1>
+        <h2>HEADPHONES</h2>
         <ul class="nav-links">
           <li><a href="#">what we do</a></li>
           <li><a href="#">our results</a></li>
           <li><a href="#">contact us</a></li>
         </ul>
       </nav>
-
+      
       <div class="hero-text">
         <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-        <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
+        <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
         <button>Call to Action</button>
-        <p class="last-p">
+        <blockquote class="last-p">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>
 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-        </p>
+        </blockquote>
       </div>
     </div>
   </header>
