--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -13,8 +13,10 @@
   <header class="hero">
     <div class="container hero-content">
       <nav class="navbar">
-        <img src="images/favicon.ico" alt="Headphones Logo" class="logo">
-        <h2>HEADPHONES</h2>
+        <div class="h-logo">
+          <img src="images/favicon.ico" alt="Headphones Logo" class="logo">
+          <h2>HEADPHONES</h2>
+        </div>
         <ul class="nav-links">
           <li><a href="#">what we do</a></li>
           <li><a href="#">our results</a></li>
@@ -27,9 +29,9 @@
         <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
         <button>Call to Action</button>
         <blockquote class="last-p">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
-laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </blockquote>
       </div>
