--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -12,62 +12,62 @@
   <header class="hero">
     <div class="container hero-content">
       <nav class="navbar">
-        <img src="images/favicon.ico" alt="Headphones Logo" class="logo">
-        <h1>HEADPHONES</h1>
+        <div class="h-logo">
+          <img src="images/favicon.ico" alt="Headphones Logo" class="logo">
+          <h2>HEADPHONES</h2>
+        </div>
         <ul class="nav-links">
           <li><a href="#">what we do</a></li>
           <li><a href="#">our results</a></li>
           <li><a href="#">contact us</a></li>
         </ul>
       </nav>
-
+      
       <div class="hero-text">
         <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-        <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
+        <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
         <button>Call to Action</button>
-        <p class="last-p">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
-laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
+        <blockquote class="last-p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-        </p>
+        </blockquote>
       </div>
     </div>
   </header>
-
-  <!-- What we do section -->   
+  <!-- What we do section -->
   <section class="section what-we-do">
     <div class="container">
       <h2 class="section-title">What we do…</h2>
       <p class="section-subtitle">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
-laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
       </p>
 
       <div class="features">
         <div class="feature">
-          <i class="holberton_school-icon-ic_sound feature-icon"></i>
+          <a href="#"><i class="holberton_school-icon-ic_sound feature-icon"></i></a>
           <h3 class="feature-title">Lorem ipsum</h3>
           <p class="feature-text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
         </div>
 
         <div class="feature">
-          <i class="holberton_school-icon-ic_video feature-icon"></i>
+          <a href="#"><i class="holberton_school-icon-ic_video feature-icon"></i></a>
           <h3 class="feature-title">Lorem ipsum</h3>
           <p class="feature-text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
         </div>
 
         <div class="feature">
-          <i class="holberton_school-icon-ic_music feature-icon"></i>
+          <a href="#"><i class="holberton_school-icon-ic_music feature-icon"></i></a>
           <h3 class="feature-title">Lorem ipsum</h3>
           <p class="feature-text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
         </div>
 
         <div class="feature">
-          <i class="holberton_school-icon-ic_hearing feature-icon"></i>
+          <a href="#"><i class="holberton_school-icon-ic_hearing feature-icon"></i></a>
           <h3 class="feature-title">Lorem ipsum</h3>
           <p class="feature-text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
         </div>
@@ -80,9 +80,9 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur.
   <div class="container">
     <h2 class="section-title">Our results speak for themselves</h2>
     <p class="section-subtitle">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br>
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
-laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
 
